# base-images

./: README.md  config.yaml  go.mod  sync-ecr.yml  sync-ghcr.yml
.github/: dependabot.yml
.github/workflows/: build.yml  images-are-public.yml  presubmit-image-documented.yml  presubmit-image-exists.yaml  presubmit-image-format.yml  presubmit-signed-images-are-signed.yml  scan.yml  sync.yml  update-image-digests.yml
examples/: clusterimagepolicy-example.yaml
hack/: update-sync-image-digests.sh
images/alpine-ffmpeg/: Dockerfile
images/alpine-gdal/: image.yaml
images/alpine-iputils/: image.yaml
images/alpine-nginx-rtmp-stream/: Dockerfile  run.sh
images/alpine-xslt/: image.yaml
images/chart-centos7/: Dockerfile
images/git/: image.yaml
images/git-ssh/: image.yaml
images/mkdocs_material/: Dockerfile  pyproject.toml
images/mkdocs_plus/: requirements.txt
images/python-arcgis/: Dockerfile  pyproject.toml
images/rpmbuild-almalinux8/: Dockerfile
images/rpmbuild-centos-stream8/: Dockerfile
images/rpmbuild-centos-stream9/: Dockerfile  rpmlintrc.toml
images/rpmbuild-centos7/: Dockerfile
images/rpmbuild-fedora/: Dockerfile  Dockerfile.39
images/texlive/: image.yaml
