[tool.poetry]
name = "arcgis-base-image"
version = "1.0.0"
description = "Base image containing Python and arcgis"
authors = ["GeoNet"]

[tool.poetry.dependencies]
python = "3.11.9"
arcgis = "2.4.0"
numpy = "1.26.4"
pandas = "2.1.4"
geopandas = "1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"